# review

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  cli.py  finalize_old.py  populate_department.py  pyproject.toml  requirements.txt  run-dev.sh  runpolling.py  runserver.py
development/: check_median_value.py  populate_department_development.py  populate_modalities_development.py  recalculate_metrics_development.py
distill/: __init__.py  calcium.py  heart_volume.py  ventricle_function.py
distiller/: __init__.py  aorta.py  calcium.py  ventricle_function.py
docs/: Platform.xml
instance/: config.cfg
repo/: app.py  converter.py  database.py  default_config.py  nlp.py  parse.py  report.py  writer.py
repo/database/: connection.py  contrast_medium.py  fall.py  report.py  review_report.py
repo/settings/: logging.conf
repo/templates/: dashboard.html  diff.html  distill.html  index.html  nlp.html  plain.html  report.html  review.html  reviewer-dashboard.html  treeMap.html  writer-dashboard.html
review/: app.py  app_config.py  calculations.py  compare.py  database.py  hedging.py  user.py
review/templates/: diff.html  distill.html  index.html  login.html  review.html  reviewer-dashboard.html  (+1 more)
scripts/: populate_department.py  populate_modalities.py  recalculate_metrics.py  runpolling.py
setup/: init.sql  upgrade-2017-09-15.sql  upgrade_1.sql  upgrade_2.sql  upgrade_3.sql
tests/: test_calculate_median.py  test_compare.py  test_distill_aorta.py  test_distill_calcium.py  test_distill_heart_volume.py  test_distill_ventricle_function.py  test_parse.py
(+97 files in other folders)
