[project]
name = "review"
version = "4.1.2"
description = "Report comparison"
authors = [{name = "Joshy Cyriac", email = "joshy@posteo.ch"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "flask-assets>=2.1.0",
    "flask-login>=0.6.3",
    "gunicorn>=23.0.0",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pyreadablediff>=0.3.0",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "schedule>=1.2.2",
    "striprtf>=0.0.29",
    "httpx>=0.28.1",
    "identity[flask]>=0.9.2",
    "structlog>=25.2.0",
    "jsmin>=3.0.1",
]
